libs/wingc/src/jsify/snapshots/reassigned_captured_variable_preflight.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    let var i = 10;
    () => {
      i = 12;
    };
    
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const std = $stdlib.std;
const $wing_is_test = process.env.WING_IS_TEST === "true";
class $Root extends $stdlib.std.Resource {
  constructor(scope, id) {
    super(scope, id);
    let i = 10;
    (() => {
      i = 12;
    });
  }
}
const $App = $stdlib.core.App.for(process.env.WING_TARGET);
new $App({ outdir: $outdir, name: "main", rootConstruct: $Root, plugins: $plugins, isTestEnvironment: $wing_is_test, sourceDir: process.env['WING_SOURCE_DIR'] }).synth();
```

